--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,11 @@ body {
 button {
   font-family: "Poppins", sans-serif;
 }
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .nav {
   display: flex;
   width: flex;
@@ -91,6 +96,7 @@ main {
   justify-content: center;
 }
 .card-content {
+  display: block;
   justify-items: center;
   width: 232px;
   height: 260px;
@@ -100,12 +106,11 @@ main {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 .img-card {
-  width: 128px;
-  height: 128px;
+  width: auto;
+  height: 50%;
   margin-top: 30px;
   margin-bottom: 20px;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
 }
 .title-card {
   text-align: center;
@@ -127,6 +132,14 @@ img {
   padding-top: 24px;
   align-content: center;
 }
+.comillas {
+  display: block;
+  text-align: center;
+  padding-top: 20px;
+  padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .cite-text {
   justify-content: center;
   margin-left: 100px;
@@ -138,6 +151,8 @@ img {
   text-align: center;
   font-size: 50px;
   font-style: bold;
+  padding-top: 20px;
+  padding: 20px;
 }
 
 /* Tablet */
@@ -151,11 +166,13 @@ img {
 
   .button-secondary {
     padding: 4px 0px;
+    font-size: 10px;
   }
   .button-primary {
     padding: 5px 10px;
     gap: 5px;
     border-radius: 8px;
+    font-size: 10px;
   }
   main {
     margin-left: 50px;
@@ -185,21 +202,14 @@ img {
     margin-bottom: 30px;
   }
   .card-content {
-    width: 120px;
-    height: 150px;
+    width: 221px;
+    height: 248px;
     margin: 8px;
     border-radius: 8px;
   }
-  .img-card {
-    width: 70px;
-    height: 70px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    margin-left: 30px;
-    margin-right: 30px;
-  }
+
   .title-card {
-    font-size: 15px;
+    font-size: 25px;
   }
   img {
     max-width: 100%;
@@ -223,6 +233,10 @@ img {
   .cite {
     font-size: 25px;
   }
+  .comillas {
+    width: 70px;
+    height: 70px;
+  }
 }
 
 /* Celu */
@@ -234,7 +248,7 @@ img {
     font-size: 10px;
   }
   button {
-    font-size: 12px;
+    font-size: 8px;
   }
   .button-secondary {
     padding: 3px 0px;
@@ -272,25 +286,14 @@ img {
     margin-bottom: 20px;
   }
   .card-content {
-    width: 60px;
-    height: 90px;
+    width: 130px;
+    height: 146px;
     margin: 8px;
     border-radius: 8px;
-  }
-  .img-card {
-    width: 45px;
-    height: 45px;
-    margin-top: 10px;
-    margin-bottom: 1px;
-    margin-left: 15px;
-    margin-right: 15px;
   }
   .title-card {
     text-align: center;
     font-size: 12px;
-  }
-  img {
-    max-width: 100%;
   }
 
   .q {
@@ -309,5 +312,9 @@ img {
 
   .cite {
     font-size: 20px;
+  }
+  .comillas {
+    width: 60px;
+    height: 60px;
   }
 }
