--- a/CSS/style.css
+++ b/CSS/style.css
@@ -166,7 +166,7 @@ img {
   background: #fff;
   border-radius: 10px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  margin: 40px;
+  margin: 30px;
   padding: 30px;
 }
 .contactame {
@@ -191,48 +191,78 @@ a + h4 {
 }
 
 .formulario {
+  display: block;
   width: 50%;
   padding: 20px;
 }
-label {
-  display: block;
+form {
+  display: flex;
+  flex-flow: row wrap;
+  width: 100%;
+  margin-top: 20px;
 }
 input {
-  display: block;
   border-radius: 10px;
   background: rgba(156, 175, 170, 0.5);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   border-style: none;
-  padding: 8px 20px;
-  margin: 8px;
+  padding: 8px 0px 8px 8px;
+  margin: 8px 8px 8px 0px;
+  width: 100%;
+}
+textarea {
+  border-radius: 10px;
+  background: rgba(156, 175, 170, 0.5);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  border-style: none;
+  padding: 8px 0px 8px 8px;
+  margin: 8px 8px 8px 0px;
+  width: 100%;
 }
 placeholder {
   color: #5d5d5d;
 }
 .input50 {
   display: block;
-  padding: 20px;
+  max-width: 50%;
 }
 .input100 {
   display: block;
-  padding: 20px;
+  width: 100%;
 }
-textarea {
-  display: block;
-  border-radius: 10px;
-  background: rgba(156, 175, 170, 0.5);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  border-style: none;
-}
+
 .button-formulario {
   display: inline-flex;
   padding: 8px 20px;
-  justify-content: center;
-  align-items: center;
   gap: 10px;
   border-radius: 10px;
   background: var(--Verde-oscuro, #9cafaa);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  margin-left: auto;
+  margin-top: 20px;
+}
+footer {
+background: var(--Verde-oscuro, #9CAFAA);
+box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+hsba(164, 11%, 69%, 1)
+display: flex;
+width: 100%;
+height: auto;
+gap: 50px;
+}
+.div-button-secondary-footer {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  padding-top: 30px;
+  margin-bottom: 15px;
+}
+.div-ico-footer {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  
+  padding-bottom: 30px;
 }
 
 /* Tablet */
