--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,14 +24,20 @@ h2 {
 p {
   margin: 10px 10px 20px 10px;
 }
+a {
+text-decoration: none;
+color: black;
+}
 
 .nav {
+  position: fixed;
   display: flex;
-  width: flex;
-  padding: 16px 64px;
+  width: 100%;
   justify-content: flex-end;
   align-items: center;
   gap: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   background: #fbf3d5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
@@ -57,16 +63,13 @@ main {
   margin-right: 100px;
 }
 .hola {
-  overflow: hidden;
   display: flex;
 }
 .left-text {
-  float: left;
   width: 50%;
   align-content: center;
 }
 .rigth-img {
-  float: left;
   width: 50%;
 }
 .heading-0 {
