--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,6 +27,10 @@ a {
 text-decoration: none;
 color: black;
 }
+a:hover {
+  color: #dd5746;
+  font-weight: bold;
+}
 
 .nav {
   position: fixed;
@@ -63,6 +67,8 @@ main {
 }
 .hola {
   display: flex;
+  max-width: 1200px;
+  margin: auto;
 }
 .left-text {
   margin-top: 50px;
@@ -150,7 +156,7 @@ img {
   margin-right: auto;
 }
 .cite-text {
-  justify-content: center;
+  text-align: center;
   margin-left: 100px;
   margin-right: 100px;
   font-size: 24px;
@@ -204,6 +210,7 @@ form {
   width: 100%;
   margin-top: 20px;
 }
+
 input {
   border-radius: 10px;
   background: rgba(156, 175, 170, 0.5);
@@ -213,6 +220,7 @@ input {
   margin: 8px 8px 8px 0px;
   width: 100%;
 }
+
 textarea {
   border-radius: 10px;
   background: rgba(156, 175, 170, 0.5);
@@ -222,12 +230,13 @@ textarea {
   margin: 8px 8px 8px 0px;
   width: 100%;
 }
+
 placeholder {
   color: #5d5d5d;
 }
 .input50 {
   display: block;
-  max-width: 50%;
+  width: 100% ;
 }
 
 .field {
@@ -251,6 +260,7 @@ width: 100%;
   margin-left: auto;
   margin-top: 20px;
 }
+
 footer {
 background: var(--Verde-oscuro, #9CAFAA);
 box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
@@ -341,7 +351,11 @@ main {
 }
 .redes-contactame {
   gap: 18px;
-}
+} 
+.field {
+flex-direction: column;
+gap: 0;
+  }
 footer {
 gap: 40px;
 }
