--- a/CSS/style.css
+++ b/CSS/style.css
@@ -39,12 +39,18 @@ a:hover {
   width: 100%;
   justify-content: flex-end;
   align-items: center;
-  gap: 50px;
   padding-top: 20px;
   padding-bottom: 20px;
   background: #fbf3d5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
+
+.nav-menu {
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+}
+
 .button-secondary {
   display: flex;
   padding: 8px 0px;
@@ -444,6 +450,7 @@ footer {
     font-size: 10px;
   }
   .nav {
+    height: 20px;
     gap: 10px;
   }
 
@@ -550,5 +557,77 @@ footer {
   .button-formulario {
     padding: 8px 10px;
     gap: 8px;
+  }
+
+  .nav {
+    height: auto;
+    flex-direction: column;
+    align-items: end;
+  }
+
+  .hamburguesa {
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+  }
+
+  .hamburguesa .open {
+    display: block;
+    height: 35px;
+    width: 35px;
+    background-image: url(../img/hamburgesa.svg);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: 0px 30px 0px 10px;
+  }
+
+  .button-primary {
+    margin: 0px;
+  }
+
+  .hamburguesa .close {
+    height: 35px;
+    width: 35px;
+    justify-content: flex-end;
+    background-image: url(../img/cerrar.svg);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: 0px 30px 0px 10px;
+  }
+
+  .nav-menu {
+    stroke: 1px;
+    display: none;
+    flex-direction: column;
+    gap: 10px;
+    background: #fbf3d5;
+    width: 100%;
+    padding: 10px;
+    align-items: end;
+    padding-right: 30px;
+    border-top: 0.5px solid #9cafaa;
+  }
+
+  .nav-menu a button {
+    text-decoration: none;
+    color: white;
+  }
+
+  .close {
+    display: none;
+  }
+
+  #menu:target .nav-menu {
+    display: flex;
+  }
+
+  #menu:target .open {
+    display: none;
+  }
+
+  #menu:target .close {
+    display: block;
   }
 }
